gitignore remove lib add ropeproject

--- a/.gitignore
+++ b/.gitignore
@@ -15,8 +15,6 @@ dist/
 downloads/
 eggs/
 .eggs/
-lib/
-lib64/
 parts/
 sdist/
 var/
@@ -37,6 +35,7 @@ pip-delete-this-directory.txt
 # Unit test / coverage reports
 htmlcov/
 .tox/
+.ropeproject
 .coverage
 .coverage.*
 .cache
